syntax = "proto3";

package xyz.block.ftl.console.v1;

import "xyz/block/ftl/buildengine/v1/buildengine.proto";
import "xyz/block/ftl/schema/v1/schema.proto";
import "xyz/block/ftl/timeline/v1/timeline.proto";
import "xyz/block/ftl/v1/ftl.proto";
import "xyz/block/ftl/v1/verb.proto";

option go_package = "github.com/block/ftl/backend/protos/xyz/block/ftl/console/v1;consolepb";
option java_multiple_files = true;

message Edges {
  repeated ftl.schema.v1.Ref in = 1;
  repeated ftl.schema.v1.Ref out = 2;
}

message Config {
  ftl.schema.v1.Config config = 1;
  Edges edges = 2;
  string schema = 3;
}

message Data {
  ftl.schema.v1.Data data = 1;
  string schema = 2;
  Edges edges = 3;
}

message Database {
  ftl.schema.v1.Database database = 1;
  Edges edges = 2;
  string schema = 3;
}

message Enum {
  ftl.schema.v1.Enum enum = 1;
  Edges edges = 2;
  string schema = 3;
}

message Topic {
  ftl.schema.v1.Topic topic = 1;
  Edges edges = 2;
  string schema = 3;
}

message TypeAlias {
  ftl.schema.v1.TypeAlias typealias = 1;
  Edges edges = 2;
  string schema = 3;
}

message Secret {
  ftl.schema.v1.Secret secret = 1;
  Edges edges = 2;
  string schema = 3;
}

message Verb {
  ftl.schema.v1.Verb verb = 1;
  string schema = 2;
  string json_request_schema = 3;
  Edges edges = 4;
}

message Module {
  string name = 1;
  string schema = 2;
  ftl.schema.v1.ModuleRuntime runtime = 3;
  repeated Verb verbs = 4;
  repeated Data data = 5;
  repeated Secret secrets = 6;
  repeated Config configs = 7;
  repeated Database databases = 8;
  repeated Enum enums = 9;
  repeated Topic topics = 10;
  repeated TypeAlias typealiases = 11;
  ftl.schema.v1.Module module = 12;
}

message TopologyGroup {
  repeated string modules = 1;
}

message Topology {
  repeated TopologyGroup levels = 1;
}

message GetModulesRequest {}
message GetModulesResponse {
  repeated Module modules = 1;
  Topology topology = 2;
}

message StreamModulesRequest {}
message StreamModulesResponse {
  repeated Module modules = 1;
  Topology topology = 2;
}

message GetConfigRequest {
  string name = 1;
  optional string module = 2;
}

message GetConfigResponse {
  bytes value = 1;
}

message SetConfigRequest {
  string name = 1;
  optional string module = 2;
  bytes value = 3;
}

message SetConfigResponse {
  bytes value = 1;
}

message GetSecretRequest {
  string name = 1;
  optional string module = 2;
}

message GetSecretResponse {
  bytes value = 1;
}

message SetSecretRequest {
  string name = 1;
  optional string module = 2;
  bytes value = 3;
}

message SetSecretResponse {
  bytes value = 1;
}

message GetInfoRequest {}

message GetInfoResponse {
  string version = 1;
  string build_time = 4;
}

message ExecuteGooseRequest {
  string prompt = 1;
}

message ExecuteGooseResponse {
  string response = 1;
  enum Source {
    SOURCE_UNSPECIFIED = 0;
    SOURCE_STDOUT = 1;
    SOURCE_STDERR = 2;
    SOURCE_COMPLETION = 3;
  }
  Source source = 2;
}

message OpenFileInEditorRequest {
  string editor = 1;
  string path = 2;
  int32 line = 3;
  int32 column = 4;
}

message OpenFileInEditorResponse {}

service ConsoleService {
  // Ping service for readiness.
  rpc Ping(ftl.v1.PingRequest) returns (ftl.v1.PingResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }

  rpc GetModules(GetModulesRequest) returns (GetModulesResponse);
  rpc StreamModules(StreamModulesRequest) returns (stream StreamModulesResponse);

  rpc GetTimeline(ftl.timeline.v1.GetTimelineRequest) returns (ftl.timeline.v1.GetTimelineResponse);
  rpc StreamTimeline(ftl.timeline.v1.StreamTimelineRequest) returns (stream ftl.timeline.v1.StreamTimelineResponse);

  rpc GetConfig(GetConfigRequest) returns (GetConfigResponse);
  rpc SetConfig(SetConfigRequest) returns (SetConfigResponse);

  rpc GetSecret(GetSecretRequest) returns (GetSecretResponse);
  rpc SetSecret(SetSecretRequest) returns (SetSecretResponse);

  rpc Call(ftl.v1.CallRequest) returns (ftl.v1.CallResponse);

  rpc StreamEngineEvents(ftl.buildengine.v1.StreamEngineEventsRequest) returns (stream ftl.buildengine.v1.StreamEngineEventsResponse);

  rpc GetInfo(GetInfoRequest) returns (GetInfoResponse);

  rpc ExecuteGoose(ExecuteGooseRequest) returns (stream ExecuteGooseResponse);

  rpc OpenFileInEditor(OpenFileInEditorRequest) returns (OpenFileInEditorResponse);
}
